--- a/webview-ui/src/i18n/locales/ru/kilocode.json
+++ b/webview-ui/src/i18n/locales/ru/kilocode.json
@@ -44,5 +44,36 @@
 			"description": "Регистрация в Kilo Code дает вам бесплатные кредиты для начала работы. Используйте свои кредиты для изучения наших функций, опробования новейших и лучших моделей и получения преимуществ Kilo Code без обязательств.",
 			"termsAndPrivacy": "Продолжая, вы соглашаетесь с <termsLink>Условиями обслуживания</termsLink> и <privacyLink>Политикой конфиденциальности.</privacyLink>"
 		}
+	},
+	"docs": "Документация",
+	"rules": {
+		"tooltip": "Управление правилами и рабочими процессами Kilo Code",
+		"ariaLabel": "Правила Kilo Code",
+		"tabs": {
+			"rules": "Правила",
+			"workflows": "Рабочие процессы"
+		},
+		"description": {
+			"rules": "Правила позволяют предоставить Kilo Code системные указания. Думайте о них как о постоянном способе включения контекста и предпочтений для ваших проектов или глобально для каждого разговора.",
+			"workflows": "Рабочие процессы позволяют определить серию шагов для руководства Kilo Code через повторяющийся набор задач, таких как развертывание сервиса или отправка PR. Чтобы вызвать рабочий процесс, введите",
+			"workflowsInChat": "в чате."
+		},
+		"sections": {
+			"globalRules": "Глобальные правила",
+			"workspaceRules": "Правила рабочего пространства",
+			"globalWorkflows": "Глобальные рабочие процессы",
+			"workspaceWorkflows": "Рабочие процессы рабочего пространства"
+		},
+		"validation": {
+			"invalidFileExtension": "Разрешены только расширения .md, .txt или без расширения"
+		},
+		"placeholders": {
+			"workflowName": "имя-рабочего-процесса (.md, .txt или без расширения)",
+			"ruleName": "имя-правила (.md, .txt или без расширения)"
+		},
+		"newFile": {
+			"newWorkflowFile": "Новый файл рабочего процесса...",
+			"newRuleFile": "Новый файл правила..."
+		}
 	}
 }
