--- a/src/i18n/locales/ko/kilocode.json
+++ b/src/i18n/locales/ko/kilocode.json
@@ -6,6 +6,33 @@
 		"title": "크레딧 부족 경고!",
 		"message": "무료 크레딧으로 충전하거나 추가 구매가 가능한지 확인하세요!"
 	},
+	"rules": {
+		"actions": {
+			"delete": "삭제",
+			"confirmDelete": "{{filename}}을(를) 삭제하시겠습니까?",
+			"deleted": "{{filename}}이(가) 삭제되었습니다"
+		},
+		"errors": {
+			"noWorkspaceFound": "워크스페이스 폴더를 찾을 수 없습니다",
+			"fileAlreadyExists": "파일 {{filename}}이(가) 이미 존재합니다",
+			"failedToCreateRuleFile": "규칙 파일 생성에 실패했습니다.",
+			"failedToDeleteRuleFile": "규칙 파일 삭제에 실패했습니다."
+		},
+		"templates": {
+			"workflow": {
+				"description": "워크플로우 설명을 여기에...",
+				"stepsHeader": "## 단계",
+				"step1": "1단계",
+				"step2": "2단계"
+			},
+			"rule": {
+				"description": "규칙 설명을 여기에...",
+				"guidelinesHeader": "## 가이드라인",
+				"guideline1": "가이드라인 1",
+				"guideline2": "가이드라인 2"
+			}
+		}
+	},
 	"commitMessage": {
 		"activated": "Kilo Code 커밋 메시지 생성기가 활성화되었습니다",
 		"gitNotFound": "⚠️ Git 저장소를 찾을 수 없거나 git을 사용할 수 없습니다",
