--- a/webview-ui/src/i18n/locales/hi/kilocode.json
+++ b/webview-ui/src/i18n/locales/hi/kilocode.json
@@ -44,5 +44,36 @@
 			"description": "Kilo Code में साइन अप करने से आपको शुरुआत के लिए मुफ्त क्रेडिट मिलते हैं। अपने क्रेडिट का उपयोग करके हमारी सुविधाओं का अन्वेषण करें, नवीनतम और सर्वोत्तम मॉडल आज़माएं, और बिना किसी प्रतिबद्धता के Kilo Code के लाभों का अनुभव करें।",
 			"termsAndPrivacy": "जारी रखकर, आप <termsLink>सेवा की शर्तों</termsLink> और <privacyLink>गोपनीयता नीति</privacyLink> से सहमत होते हैं।"
 		}
+	},
+	"docs": "दस्तावेज़",
+	"rules": {
+		"tooltip": "Kilo Code नियम और वर्कफ़्लो प्रबंधित करें",
+		"ariaLabel": "Kilo Code नियम",
+		"tabs": {
+			"rules": "नियम",
+			"workflows": "वर्कफ़्लो"
+		},
+		"description": {
+			"rules": "नियम आपको Kilo Code को सिस्टम-स्तरीय मार्गदर्शन प्रदान करने की अनुमति देते हैं। उन्हें अपनी परियोजनाओं के लिए या हर बातचीत के लिए वैश्विक रूप से संदर्भ और प्राथमिकताओं को शामिल करने के एक स्थायी तरीके के रूप में सोचें।",
+			"workflows": "वर्कफ़्लो आपको Kilo Code को दोहराए जाने वाले कार्यों के सेट के माध्यम से मार्गदर्शन करने के लिए चरणों की एक श्रृंखला परिभाषित करने की अनुमति देते हैं, जैसे कि सेवा तैनात करना या PR सबमिट करना। वर्कफ़्लो को आमंत्रित करने के लिए, टाइप करें",
+			"workflowsInChat": "चैट में।"
+		},
+		"sections": {
+			"globalRules": "वैश्विक नियम",
+			"workspaceRules": "वर्कस्पेस नियम",
+			"globalWorkflows": "वैश्विक वर्कफ़्लो",
+			"workspaceWorkflows": "वर्कस्पेस वर्कफ़्लो"
+		},
+		"validation": {
+			"invalidFileExtension": "केवल .md, .txt या कोई फ़ाइल एक्सटेंशन की अनुमति है"
+		},
+		"placeholders": {
+			"workflowName": "वर्कफ़्लो-नाम (.md, .txt या कोई एक्सटेंशन नहीं)",
+			"ruleName": "नियम-नाम (.md, .txt या कोई एक्सटेंशन नहीं)"
+		},
+		"newFile": {
+			"newWorkflowFile": "नई वर्कफ़्लो फ़ाइल...",
+			"newRuleFile": "नई नियम फ़ाइल..."
+		}
 	}
 }
