--- a/webview-ui/src/i18n/locales/ja/kilocode.json
+++ b/webview-ui/src/i18n/locales/ja/kilocode.json
@@ -54,8 +54,8 @@
 			"workflows": "ワークフロー"
 		},
 		"description": {
-			"rules": "ルールを使用すると、Kilo Codeにシステムレベルのガイダンスを提供できます。プロジェクトまたはすべての会話にグローバルにコンテキストと設定を含める永続的な方法として考えてください。",
-			"workflows": "ワークフローを使用すると、サービスのデプロイやPRの送信など、反復的なタスクのセットを通じてKilo Codeをガイドする一連のステップを定義できます。ワークフローを呼び出すには、次のように入力します",
+			"rules": "ルールを使用すると、Kilo Codeがすべてのモードとすべてのプロンプトで従うべき指示を提供できます。これらは、ワークスペースまたはグローバルですべての会話にコンテキストと設定を含める永続的な方法です。",
+			"workflows": "ワークフローは会話用の準備されたテンプレートです。ワークフローを使用すると、頻繁に使用するプロンプトを定義でき、サービスのデプロイやPRの送信など、反復的なタスクを通じてKilo Codeをガイドする一連のステップを含めることができます。ワークフローを呼び出すには、次のように入力します",
 			"workflowsInChat": "チャットで。"
 		},
 		"sections": {
