--- a/webview-ui/src/i18n/locales/ru/kilocode.json
+++ b/webview-ui/src/i18n/locales/ru/kilocode.json
@@ -54,8 +54,8 @@
 			"workflows": "Рабочие процессы"
 		},
 		"description": {
-			"rules": "Правила позволяют предоставить Kilo Code системные указания. Думайте о них как о постоянном способе включения контекста и предпочтений для ваших проектов или глобально для каждого разговора.",
-			"workflows": "Рабочие процессы позволяют определить серию шагов для руководства Kilo Code через повторяющийся набор задач, таких как развертывание сервиса или отправка PR. Чтобы вызвать рабочий процесс, введите",
+			"rules": "Правила позволяют предоставить Kilo Code инструкции, которым он должен следовать во всех режимах и для всех промптов. Это постоянный способ включения контекста и предпочтений для всех разговоров в вашем рабочем пространстве или глобально.",
+			"workflows": "Рабочие процессы - это подготовленный шаблон для разговора. Рабочие процессы позволяют определить промпты, которые вы часто используете, и могут включать серию шагов для руководства Kilo Code через повторяющиеся задачи, такие как развертывание сервиса или отправка PR. Чтобы вызвать рабочий процесс, введите",
 			"workflowsInChat": "в чате."
 		},
 		"sections": {
