--- a/webview-ui/src/i18n/locales/zh-TW/kilocode.json
+++ b/webview-ui/src/i18n/locales/zh-TW/kilocode.json
@@ -54,8 +54,8 @@
 			"workflows": "工作流程"
 		},
 		"description": {
-			"rules": "規則允許你為 Kilo Code 提供系統級指導。將它們視為為你的專案或全域每次對話包含上下文和偏好的持久方式。",
-			"workflows": "工作流程允許你定義一系列步驟來指導 Kilo Code 完成重複性任務集，如部署服務或提交 PR。要調用工作流程，請輸入",
+			"rules": "規則允許你為 Kilo Code 提供在所有模式和所有提示中都應遵循的指令。它們是在你的工作空間或全域範圍內為所有對話包含上下文和偏好的持久方式。",
+			"workflows": "工作流程是為對話準備的範本。工作流程允許你定義經常使用的提示，並可以包含一系列步驟來指導 Kilo Code 完成重複性任務，如部署服務或提交 PR。要調用工作流程，請輸入",
 			"workflowsInChat": "在聊天中。"
 		},
 		"sections": {
