--- a/webview-ui/src/i18n/locales/hi/kilocode.json
+++ b/webview-ui/src/i18n/locales/hi/kilocode.json
@@ -54,8 +54,8 @@
 			"workflows": "वर्कफ़्लो"
 		},
 		"description": {
-			"rules": "नियम आपको Kilo Code को सिस्टम-स्तरीय मार्गदर्शन प्रदान करने की अनुमति देते हैं। उन्हें अपनी परियोजनाओं के लिए या हर बातचीत के लिए वैश्विक रूप से संदर्भ और प्राथमिकताओं को शामिल करने के एक स्थायी तरीके के रूप में सोचें।",
-			"workflows": "वर्कफ़्लो आपको Kilo Code को दोहराए जाने वाले कार्यों के सेट के माध्यम से मार्गदर्शन करने के लिए चरणों की एक श्रृंखला परिभाषित करने की अनुमति देते हैं, जैसे कि सेवा तैनात करना या PR सबमिट करना। वर्कफ़्लो को आमंत्रित करने के लिए, टाइप करें",
+			"rules": "नियम आपको Kilo Code को निर्देश प्रदान करने की अनुमति देते हैं जिनका उसे सभी मोड्स में और सभी प्रॉम्प्ट्स के लिए पालन करना चाहिए। ये आपके वर्कस्पेस में या वैश्विक रूप से सभी बातचीत के लिए संदर्भ और प्राथमिकताओं को शामिल करने का एक स्थायी तरीका हैं।",
+			"workflows": "वर्कफ़्लो एक बातचीत के लिए एक तैयार टेम्प्लेट हैं। वर्कफ़्लो आपको उन प्रॉम्प्ट्स को परिभाषित करने की अनुमति देते हैं जिनका आप अक्सर उपयोग करते हैं, और इसमें Kilo Code को दोहराए जाने वाले कार्यों के माध्यम से मार्गदर्शन करने के लिए चरणों की एक श्रृंखला शामिल हो सकती है, जैसे कि सेवा तैनात करना या PR सबमिट करना। वर्कफ़्लो को आमंत्रित करने के लिए, टाइप करें",
 			"workflowsInChat": "चैट में।"
 		},
 		"sections": {
