--- a/webview-ui/src/i18n/locales/ko/kilocode.json
+++ b/webview-ui/src/i18n/locales/ko/kilocode.json
@@ -54,8 +54,8 @@
 			"workflows": "워크플로우"
 		},
 		"description": {
-			"rules": "규칙을 사용하면 Kilo Code에 시스템 수준의 지침을 제공할 수 있습니다. 프로젝트나 모든 대화에 전역적으로 컨텍스트와 기본 설정을 포함하는 지속적인 방법으로 생각하세요.",
-			"workflows": "워크플로우를 사용하면 서비스 배포나 PR 제출과 같은 반복적인 작업 세트를 통해 Kilo Code를 안내하는 일련의 단계를 정의할 수 있습니다. 워크플로우를 호출하려면 다음과 같이 입력하세요",
+			"rules": "규칙을 사용하면 Kilo Code가 모든 모드와 모든 프롬프트에서 따라야 할 지침을 제공할 수 있습니다. 이는 워크스페이스나 전역적으로 모든 대화에 컨텍스트와 기본 설정을 포함하는 지속적인 방법입니다.",
+			"workflows": "워크플로우는 대화를 위한 준비된 템플릿입니다. 워크플로우를 사용하면 자주 사용하는 프롬프트를 정의할 수 있으며, 서비스 배포나 PR 제출과 같은 반복적인 작업을 통해 Kilo Code를 안내하는 일련의 단계를 포함할 수 있습니다. 워크플로우를 호출하려면 다음과 같이 입력하세요",
 			"workflowsInChat": "채팅에서."
 		},
 		"sections": {
