--- a/webview-ui/src/i18n/locales/zh-CN/kilocode.json
+++ b/webview-ui/src/i18n/locales/zh-CN/kilocode.json
@@ -54,8 +54,8 @@
 			"workflows": "工作流"
 		},
 		"description": {
-			"rules": "规则允许你为 Kilo Code 提供系统级指导。将它们视为为你的项目或全局每次对话包含上下文和偏好的持久方式。",
-			"workflows": "工作流允许你定义一系列步骤来指导 Kilo Code 完成重复性任务集，如部署服务或提交 PR。要调用工作流，请输入",
+			"rules": "规则允许你为 Kilo Code 提供在所有模式和所有提示中都应遵循的指令。它们是在你的工作空间或全局范围内为所有对话包含上下文和偏好的持久方式。",
+			"workflows": "工作流是为对话准备的模板。工作流允许你定义经常使用的提示，并可以包含一系列步骤来指导 Kilo Code 完成重复性任务，如部署服务或提交 PR。要调用工作流，请输入",
 			"workflowsInChat": "在聊天中。"
 		},
 		"sections": {
